Fix Dark Mode, Adjust Top Nav Style

--- a/frontend/app/assets/css/global.css
+++ b/frontend/app/assets/css/global.css
@@ -35,4 +35,5 @@ a:active {
 /* Firefox滚动条样式 */
 * {
   scrollbar-width: none;
+  box-sizing: border-box;
 }
